2007-05-31  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h:
	* clutter/clutter-fixed.c:
	(_clutter_double_to_int):
	Fixed return value to gint; added missing cast that broke negative
	number conversions.
	
	(CLUTTER_ANGLE_FROM_DEGX):
	Swapped division and multiplication around to avoid overflows.

	* clutter/clutter-behaviour-ellipse.c:
	Fixed incorrectly set lower bounds for angle properties.

	* clutter/clutter-actor.h:
	* clutter/clutter-actor.c:
	Added ClutterVertices type.
	(clutter_actor_get_transformed_vertices):
	New function.

2007-05-31  Matthew Allum  <mallum@openedhand.com>
	* TODO:
	Sync up for whats left for 0.4 release (and 0.6 ideas)

2007-05-31  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-behaviour-ellipse.c:
	Remove uneeded knot signal

	* clutter/clutter-behaviour-path.c: 
	Fix so knot signal is emitted only when a knot is reached.

	* clutter/clutter-effect.c:
	* clutter/clutter-effect.h:
	Add a scale effect.

	* configure.ac:
	* doc/manual/Makefile.am:
	* doc/manual/clutter-manual.xml.in:
	* doc/manual/manual.xsl:
	* doc/manual/style.css:
	Add various bits for application developers manual. 
	
2007-05-30  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-alpha.h:
	* clutter/clutter-alpha.c:
	Removed ClutterSmoothstep struct
	(clutter_smoothstep_inc_func):
	Renamed to clutter_smoothstep_func.
	(clutter_smoothstep_added_func):
	Added.
	
2007-05-29  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h:
	(clutter_cosx):
	(clutter_cosi):
	Fixed wrong sign in cos -> sin tranformation.

	* clutter/clutter-behaviour-ellipse.c:
	(clutter_behaviour_ellipse_advance):
	Replaced coordinace calculation for tilted ellipse with a sane
	algorithm.

	* examples/behave.c:
	Added tilt parameter to the example ellptic path.
	
2007-05-29  Tomas Frydrych  <tf@openedhand.com>

	* clutter/cogl/gles/cogl.c:
	(cogl_setup_viewport):
	Fixed z_camera calculation.
	
2007-05-28  Matthew Allum  <mallum@openedhand.com>
